// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecialEditionButton should display a default SpecialEditionButton with imported styling 1`] = `
<View
  accessibilityLabel="Food
Monthly - Special Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FEEEF7",
      "flexDirection": "row",
      "paddingTop": 12,
    }
  }
>
  ImageResource
  <View
    style={
      Object {
        "flexShrink": 1,
        "paddingBottom": 15,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#121212",
          "flexWrap": "wrap",
          "fontFamily": "GHGuardianHeadline-Regular",
          "fontSize": 34,
          "lineHeight": 34,
        }
      }
    >
      Food
Monthly
    </Text>
    <Text
      style={
        Object {
          "color": "#7D0068",
          "flexWrap": "wrap",
          "fontFamily": "GuardianTextSans-Bold",
          "fontSize": 17,
          "lineHeight": 20,
          "marginTop": 10,
        }
      }
    >
      Store cupboard special: 20 quick and easy lockdown suppers
    </Text>
    <Text
      style={
        Object {
          "color": "#7D0068",
          "flexWrap": "wrap",
          "fontFamily": "GuardianTextSans-Regular",
          "fontSize": 15,
          "lineHeight": 16,
          "marginTop": 8,
        }
      }
    >
      Available until
       
      2/1/1998
    </Text>
  </View>
</View>
`;

exports[`SpecialEditionButton should display a selected SpecialEditionButton despite imported styling 1`] = `
<View
  accessibilityLabel="Food
Monthly - Special Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#052962",
      "flexDirection": "row",
      "paddingTop": 12,
    }
  }
>
  ImageResource
  <View
    style={
      Object {
        "flexShrink": 1,
        "paddingBottom": 15,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "flexWrap": "wrap",
          "fontFamily": "GHGuardianHeadline-Regular",
          "fontSize": 34,
          "lineHeight": 34,
        }
      }
    >
      Food
Monthly
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "flexWrap": "wrap",
          "fontFamily": "GuardianTextSans-Bold",
          "fontSize": 17,
          "lineHeight": 20,
          "marginTop": 10,
        }
      }
    >
      Store cupboard special: 20 quick and easy lockdown suppers
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "flexWrap": "wrap",
          "fontFamily": "GuardianTextSans-Regular",
          "fontSize": 15,
          "lineHeight": 16,
          "marginTop": 8,
        }
      }
    >
      Available until
       
      2/1/1998
    </Text>
  </View>
</View>
`;
